[package]
name = "ashuanu"
version = "0.1.0"
authors = ["anshul <anshulgoel151999@gmail.com>"]
edition = "2018"
description = "ashuanu mandatory description"
repository = "https://github.com/anshulrgoyal/ashuanu"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
